--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <article>
     <p style="text-align: center;">
-  <a href="https://dornik.github.io" rel="external nofollow noopener" target="_blank">Dominik Bauer</a> <sup>1</sup>, <a href="https://www.zhenjiaxu.com/" rel="external nofollow noopener" target="_blank">Zhenjia Xu</a> <sup>1,2</sup>, <a href="https://shurans.github.io/" rel="external nofollow noopener" target="_blank">Shuran Song</a> <sup>1,2</sup><br>
+  <a href="https://www.dominikbauer.io" rel="external nofollow noopener" target="_blank">Dominik Bauer</a> <sup>1</sup>, <a href="https://www.zhenjiaxu.com/" rel="external nofollow noopener" target="_blank">Zhenjia Xu</a> <sup>1,2</sup>, <a href="https://shurans.github.io/" rel="external nofollow noopener" target="_blank">Shuran Song</a> <sup>1,2</sup><br>
   <small><i><sup>1</sup> Columbia University, <sup>2</sup> Stanford University</i></small>
 </p>
 
@@ -109,6 +109,13 @@
   <video class="video-fluid rounded z-depth-1" width="auto" height="auto" controls="true" autoplay="true" muted="true" loop="true">
     <source src="/assets/video/teaser.webm" type="video/webm; codecs=vp9,vorbis"></source>
     <source src="/assets/video/teaser.mp4" type="video/mp4"></source>
+  </video>
+</figure>
+
+<figure>
+  <video class="video-fluid rounded z-depth-1" width="auto" height="auto" controls="true" autoplay="false" muted="false" loop="false">
+    <source src="/assets/video/talk.webm" type="video/webm; codecs=vp9,vorbis"></source>
+    <source src="/assets/video/talk.mp4" type="video/mp4"></source>
   </video>
 </figure>
 
