Disabled autoplay on talk video.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </figure>
 
 <figure>
-  <video class="video-fluid rounded z-depth-1" width="auto" height="auto" controls="true" autoplay="false" muted="false" loop="false">
+  <video class="video-fluid rounded z-depth-1" width="auto" height="auto" controls="true" muted="false" loop="false">
     <source src="/assets/video/talk.webm" type="video/webm; codecs=vp9,vorbis"></source>
     <source src="/assets/video/talk.mp4" type="video/mp4"></source>
   </video>
